ITEM NAME AND PRICE

--- a/Front-End/PC Builder Home(UpdatedSlideshow)/home.html
+++ b/Front-End/PC Builder Home(UpdatedSlideshow)/home.html
@@ -271,6 +271,7 @@
                         <img class="img-fluid" src="./images/1.jpg" alt="..." />
                         <div class="card">
                             <div class="card-body">
+                               <h3></h><b>ITEM NAME $100</b></h3>   
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                                 <p>
                                     <a href="#" class="btn btn-primary">
@@ -294,6 +295,7 @@
                         <img class="img-fluid" src="./images/2.jpg" alt="..." />
                         <div class="card">
                             <div class="card-body">
+                                <h3></h><b>ITEM NAME $100</b></h3>   
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                                 <p>
                                     <a href="#" class="btn btn-primary">
@@ -317,6 +319,7 @@
                         <img class="img-fluid" src="./images/3.jpg" alt="..." />
                         <div class="card">
                             <div class="card-body">
+                                <h3></h><b>ITEM NAME $100</b></h3>   
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                                 <p>
                                     <a href="#" class="btn btn-primary">
@@ -348,6 +351,7 @@
                         <img class="img-fluid" src="./images/4.jpg" alt="..." />
                         <div class="card">
                             <div class="card-body">
+                                <h3></h><b>ITEM NAME $100</b></h3>   
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                                 <p>
                                     <a href="#" class="btn btn-primary">
@@ -371,6 +375,7 @@
                         <img class="img-fluid" src="./images/5.jpg" alt="..." />
                         <div class="card">
                             <div class="card-body">
+                                <h3></h><b>ITEM NAME $100</b></h3>   
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                                 <p>
                                     <a href="#" class="btn btn-primary">
@@ -394,6 +399,7 @@
                         <img class="img-fluid" src="./images/6.jpg" alt="..." />
                         <div class="card">
                             <div class="card-body">
+                                <h3></h><b>ITEM NAME $100</b></h3>   
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                                 <p>
                                     <a href="#" class="btn btn-primary">
